--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
   <version>0.1.0-SNAPSHOT</version>
   <modules>
     <module>base</module>
+    <module>sprint-boot</module>
   </modules>
 
   <properties>
@@ -17,6 +18,7 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <java.version>1.8</java.version>
 
+    <spring.boot.version>2.0.0.RELEASE</spring.boot.version>
     <slf4j.version>1.7.25</slf4j.version>
     <log4j.version>2.6.2</log4j.version>
     <disruptor.version>3.3.6</disruptor.version>
@@ -25,6 +27,11 @@
 
   <dependencyManagement>
     <dependencies>
+      <dependency>
+        <groupId>com.github.seanyinx</groupId>
+        <artifactId>base</artifactId>
+        <version>0.1.0-SNAPSHOT</version>
+      </dependency>
       <dependency>
         <groupId>com.lmax</groupId>
         <artifactId>disruptor</artifactId>
