--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
   <modules>
     <module>base</module>
     <module>sprint-boot</module>
+    <module>integration</module>
   </modules>
 
   <properties>
