--- a/sprint-boot/pom.xml
+++ b/sprint-boot/pom.xml
@@ -43,6 +43,12 @@
     </dependency>
 
     <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.6</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
@@ -55,7 +61,7 @@
     <dependency>
       <groupId>com.atlassian.ta</groupId>
       <artifactId>wiremock-pact-generator</artifactId>
-      <version>2.4.0</version>
+      <version>2.4.1-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>io.rest-assured</groupId>
@@ -64,17 +70,12 @@
     </dependency>
     <dependency>
       <groupId>au.com.dius</groupId>
-      <artifactId>pact-jvm-provider_2.11</artifactId>
+      <artifactId>pact-jvm-provider</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>au.com.dius</groupId>
-      <artifactId>pact-jvm-provider-junit_2.11</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>au.com.dius</groupId>
-      <artifactId>pact-jvm-model_2.11</artifactId>
+      <artifactId>pact-jvm-provider-junit</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
